--- a/main.rmd
+++ b/main.rmd
@@ -781,8 +781,6 @@ cat("McFadden R-squared: ", format(mcFadden, digits=3), "\n")
 ```
   
 
-All three models are highly significant to affect on loan approval, as they all have p-values less than the standard level of statistical significance of .05. Model 1 uses CIBIL Score only. It is highly significant and explains a substantial portion of variance with an R^2 of 0.620. Its high AIC 2155.6 indicates it's the least efficient model. Model 2 is the same as Model I but with the introduction of the Loan Term. It shows an improvement in fit since the AIC drops to 1959.4 and increases the R^2 to .655. This model confirms that both CIBIL Score and Loan Term are crucial, highly significant predictors. Utilizing these two variables can capture the majority of the available predictive power in regards to loan approval. Model 3 is Model two with the addition Loan Amount. It achieves the best  fit with the lowest AIC of 1954.7 and highest R^2 of .656, and all three variables are now statistically significant. The variables included are all statistically significant in this model, as the p-value of the loan-amount is .00967. This means we reject the null hypothesis of a non-significant variable and say that every variable is contributing statistically unique and valuable information to the model's fit.
-
-To answer the question that is posed, we reject the null hypothesis and state that Model3 with the three predictors, which include CIBIL score, loan term, and loan amount, is the best predictor and it outweighs the penalty of adding more parameters. Since Model3 has the highest McFadden R^2, lowest AIC, and variables being significant, it shows that Model3 accounts for a slightly greater proportion of variability in loan approval status than the other models.
+All three models are highly significant to affect on loan approval, as they all have p-values less than the standard level of statistical significance of .05. Model 1 uses CIBIL Score only.M1 was the best performing given the data set so it is not worth adding additional features, we used log reg because the final result (loan approval) is a binary categorical variable, EDA showed cibil score and loan term had strongest relationship with approval so we used those in the log reg models. To answer the question that is posed, we reject the null hypothesis and state that Model1 with just the CIBIL score is the best predictor.
 
 ### References
