--- a/main.rmd
+++ b/main.rmd
@@ -781,6 +781,8 @@ cat("McFadden R-squared: ", format(mcFadden, digits=3), "\n")
 ```
   
 
-All three models are highly significant to affect on loan approval, as they all have p-values less than the standard level of statistical significance of .05. Model 1 uses CIBIL Score only.M1 was the best performing given the data set so it is not worth adding additional features, we used log reg because the final result (loan approval) is a binary categorical variable, EDA showed cibil score and loan term had strongest relationship with approval so we used those in the log reg models. To answer the question that is posed, we reject the null hypothesis and state that Model1 with just the CIBIL score is the best predictor.
+All three models are highly significant to affect on loan approval, as they all have p-values less than the standard level of statistical significance of .05. Model 1, or M1, uses CIBIL Score only. Model 2, or M2, is model 1 with loan term added. Model 3, or M3, is M2 with loan amount added. M1 has an R-squared value of .623, an AIC score of 2126,  a Hosmer and Lemeshow X-squared value of 623 with a p-value of 2e-16. The accuracy on M1 is 91.77%. M2 has an R-squared value of .659, an AIC score of 1925, and a Hosmer and Lemeshow X-squared value of 182 with a p-value of 2e-16. The accuracy on M2 is 91.56%. M3 has an R-squared value of .660, an AIC score of 2126,  and a Hosmer and Lemeshow X-squared value of 181 with a p-value of 2e-16. The accuracy on M3 is 91.63%.
+
+M1 was the best performing given the data set. This is due to the fact that it only uses one predictor. The simplest model is less prone to overfitting and makes the data easier to interpret.  The accuracy is the highest vallue as well and the R^2 is marginal. The change of less than 4 percentage points in varaince explained may not justify the added complexity and data requirements. It is not worth adding additional features, we used log reg because the final result (loan approval) is a binary categorical variable, EDA showed cibil score and loan term had strongest relationship with approval so we used those in the log reg models.  To answer the question that is posed, we reject the null hypothesis and state that Model1 with just the CIBIL score is the best predictor.
 
 ### References
