--- a/references.bib
+++ b/references.bib
@@ -17,3 +17,35 @@
   url          = {https://www.kaggle.com/datasets/architsharma01/loan-approval-prediction-dataset/data},
   note         = {Accessed: 2025-10-28}
 }
+
+@article{Wu2018Customer,
+  author    = {H. Wu and C.-C. Wang},
+  title     = {Customer Segmentation of Credit Card Default by Self Organizing Map},
+  journal   = {American Journal of Computational Mathematics},
+  year      = {2018},
+  volume    = {8},
+  pages     = {197--202},
+  doi       = {10.4236/ajcm.2018.83015},
+  url       = {https://doi.org/10.4236/ajcm.2018.83015}
+}
+
+@techreport{Bhardwaj2015Credit,
+  author    = {Geetesh Bhardwaj and Rajdeep Sengupta},
+  title     = {Credit Scoring and Loan Default},
+  institution = {Federal Reserve Bank of Kansas City},
+  year      = {2015},
+  number    = {RWP 15‑02},
+  url       = {https://www.kansascityfed.org/documents/7727/rwp15-02.pdf}
+}
+
+@article{Anon2025DataDrivenLoanApproval,
+  author    = {Artificial Intelligence Department, Sadat Academy for Management Sciences and Business Technology Department, Egyptian Russian University},
+  title     = {A Data Driven Model for Predicting Loan Approval Using Machine Learning Approaches},
+  journal   = {ERU Research Journal},
+  year      = {2025},
+  volume    = {4},
+  number    = {1},
+  pages     = {2271--2289},
+  doi       = {10.21608/erurj.2025.291674.1149},
+  url       = {https://erurj.journals.ekb.eg/article_408982.html}
+}
